# AI_engineer

RAG_pfd/: .gitignore  RAG_PROJECT_SPEC_EN.md
RAG_pfd/frontend/: vite.config.js
Tractian_case/: DOCKER.md  Dockerfile  RAG_PROJECT_SPEC.md  docker-compose.yml
Tractian_case/.claude/: settings.local.json
Tractian_case/backend/: requirements.txt
Tractian_case/frontend/: package-lock.json
analytics_content_agent/: .env  BACKEND.md  Dockerfile  Dockerfile.sandbox  agent.py  aplication_structure.md  app.py  db.py  docker-compose.yml  docker_tips.txt  requirements.txt  test_agent.ipynb  test_discover_skill_headers.ipynb
analytics_content_agent/front/: index.html
api_caller_and_runtime/: CLAUDE.md  README.md  index.html  llm.py  persistence.py  requirements.txt  server.py
big_data_anlytics_ai/: .env.example  .gitignore  Dockerfile.frontend  config.py  database.py  docker-compose.yml  main.py  requirements.txt
csv_analytics_ai/: .dockerignore  main.py  models.py  requirements.txt  start.bat  test_database.ipynb
data/: data.csv
loyer_jarvis_agent/: .gitignore  requirements.txt
loyer_jarvis_agent/Step_1/: COMPLETION_REPORT.md  IMPLEMENTATION_NOTES.md  INDEX.md  MANIFEST.md  QUICKSTART.md  README.md  __init__.py  database.py  docker-compose.yml  init_db.sql  models.py  pyproject.toml  test_database.py
loyer_jarvis_agent/Step_1/alembic/: env.py
loyer_jarvis_agent/Step_1/alembic/versions/: 001_initial_schema.py
research_content_agent/: .gitignore  Dockerfile  README.md  main.py
time_series_analysis_agent/: Dockerfile  main.py  test_agent.ipynb
(+166 files in other folders)
